tests/regression/illtyped/bogusMap.gr
map : forall (n : Nat=)
    . (Int -> Int) |n| -> Vect n Int -> Vect n Int
map |f| ys =
    case ys of
      Nil -> Nil;
      (Cons x xs) -> Cons (f x) (Cons 5 (map |f| xs))
